terraform/sg.tf
# Thanks to @christophetd and his Github.com/Adaz project for this little code
data "http" "source_ip" {
  url = "http://checkip.amazonaws.com"
}

locals {
  # Logic: If var.src_ip is provided, use it; otherwise, use the dynamic IP of deploying system
  src_ip = var.src_ip != "" ? var.src_ip : "${chomp(data.http.source_ip.response_body)}/32" 
  mgmt_ip = var.mgmt_ip != "" ? var.mgmt_ip : "${chomp(data.http.source_ip.response_body)}/32" 
}


# Generic security group for linux systems
resource "aws_security_group" "linux_ingress" {
  name   = "linux-ingress"
  vpc_id = aws_vpc.operator.id

  # Port http
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks     = [local.src_ip]
  }

  # Other http Port 8080
  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    cidr_blocks     = [local.src_ip]
  }

  # Port https
  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    cidr_blocks     = [local.src_ip]
  }

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "linux_ssh_ingress" {
  name   = "linux-ssh-ingress"
  vpc_id = aws_vpc.operator.id

  # SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [local.src_ip]
  }

  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [local.mgmt_ip]
  }

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "linux_allow_all_internal" {
  name   = "linux-allow-all-internal"
  vpc_id = aws_vpc.operator.id

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = [var.vpc_cidr]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    self        = true
  }
}
